Bug #9994
cxgbe t4nex: Handle get_fl_payload() alloc failures
Start date:
2018-11-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
An update from Chelsio is needed as follows:
"get_fl_payload is modified such that it doesn't leave any iq and fl
consumer
state (software cidx, etc.) unmodified, and doesn't leak any mblk/dblk,
if alloc
fails.
When get_fl_payload fails the caller just rearms the iq with a
longer-than-default timer and stop servicing it."
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit bbb9d5d65bf8372aae4b8821c80e218b8b832846
commit bbb9d5d65bf8372aae4b8821c80e218b8b832846 Author: John Levon <john.levon@joyent.com> Date: 2018-11-26T02:18:12.000Z 9994 cxgbe t4nex: Handle get_fl_payload() alloc failures 9995 cxgbe t4_devo_attach() should initialize ->sfl Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@joyent.com>