9994 cxgbe t4nex: Handle get_fl_payload() alloc failures 9995 cxgbe t4_devo_attach() should initialize ->sfl Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@joyent.com>